# Cpp23-import-std-in-CMake

./: CMakeLists.txt  EnableCxxImportStd.cmake  README.md  foo.cppm  main.cpp
